@@ -1,20 +1,29 @@
 package com.infobip.typescript.type;
 
-import com.infobip.jackson.*;
+import static org.assertj.core.api.BDDAssertions.then;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Stream;
+
+import com.infobip.jackson.PresentPropertyJsonHierarchy;
+import com.infobip.jackson.SimpleJsonHierarchy;
+import com.infobip.jackson.TypeProvider;
+import com.infobip.jackson.dynamic.DynamicHierarchyDeserializer;
+import com.infobip.jackson.dynamic.JsonValueToJavaTypeJacksonMapping;
 import com.infobip.typescript.TestBase;
 import cz.habarta.typescript.generator.Input;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
-
-import static org.assertj.core.api.BDDAssertions.then;
-
 class JsonTypeExtensionTest extends TestBase {
 
     JsonTypeExtensionTest() {
-        super(new JsonTypeExtension(), Collections.emptyList());
+        super(new JsonTypeExtension(() -> Stream.of(new DynamicHierarchyDeserializer<>(DynamicHierarchyRoot.class,
+                                                                                       List.of(new JsonValueToJavaTypeJacksonMapping<>(
+                                                                                           "LEAF",
+                                                                                           DynamicLeaf.class))))), Collections.emptyList());
     }
 
     @Test
@@ -68,6 +77,24 @@ class JsonTypeExtensionTest extends TestBase {
 }
 
 
+    @Test
+    void shouldAddReadonlyTypeFieldForDynamicHierarch() {
+
+        // when
+        String actual = whenGenerate(Input.from(DynamicHierarchyRoot.class,
+                                                DynamicLeaf.class));
+
+        // then
+        then(actual).isEqualTo(
+            "\n" +
+            "export interface DynamicHierarchyRoot {\n" +
+            "}\n" +
+            "\n" +
+            "export class DynamicLeaf implements DynamicHierarchyRoot {\n" +
+            "    readonly type: string = \"LEAF\";\n" +
+            "}\n");
+    }
+
     @Getter
     @AllArgsConstructor
     enum HierarchyType implements TypeProvider {
@@ -115,4 +142,17 @@ class JsonTypeExtensionTest extends TestBase {
     static class Two implements PresentPropertyHierarchyRoot {
 
     }
+
+    interface DynamicHierarchyRoot {
+
+    }
+
+    static class DynamicLeaf implements DynamicHierarchyRoot {
+
+        public String getType() {
+            return "LEAF";
+        }
+
+    }
+
 }
